--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <label for="password">Contraseña:</label>
           <input type="password" class="form-control" id="password" required>
         </div>
-        <button type="button" class="btn btn-primary" onclick="login()">Iniciar sesión</button>
+        <button type="button" class="btn btn-primary" id="loginBtn">Iniciar sesión</button>
       </form>
     </div>
   </div>
@@ -66,6 +66,11 @@
         console.error("Error de autenticación: ", errorMessage);
       });
   }
+
+  // Adjuntar el evento click después de que la página se haya cargado completamente
+  document.addEventListener("DOMContentLoaded", function () {
+    document.getElementById("loginBtn").addEventListener("click", login);
+  });
 </script>
 
 </body>
