--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         console.log("Usuario autenticado: ", user);
 
         // Redirigir a la página autenticada
-        window.location.href = "ruta-de-tu-pagina-autenticada.html";
+        window.location.href = "user.html";
       })
       .catch(function (error) {
         // Manejo de errores
