--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <input type="password" class="form-control" id="password" required>
         </div>
         <button type="button" class="btn btn-primary" id="loginBtn">Iniciar sesión</button>
+        <button type="button" class="btn btn-link" id="resetPasswordBtn">¿Olvidaste tu contraseña?</button>
       </form>
     </div>
   </div>
@@ -32,7 +33,7 @@
 <!-- Firebase JavaScript SDK -->
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-  import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+  import { getAuth, signInWithEmailAndPassword, sendPasswordResetEmail } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
   // Configuración de Firebase - Reemplaza con tus propias credenciales
   const firebaseConfig = {
@@ -78,9 +79,26 @@
       });
   }
 
+  // Función para enviar correo de restablecimiento de contraseña
+  function resetPassword() {
+    const email = document.getElementById('email').value;
+
+    sendPasswordResetEmail(auth, email)
+      .then(function () {
+        // Éxito al enviar el correo de restablecimiento
+        alert('Se ha enviado un correo de restablecimiento de contraseña. Revise su bandeja de entrada.');
+      })
+      .catch(function (error) {
+        // Manejo de errores
+        console.error("Error al enviar correo de restablecimiento de contraseña: ", error);
+        alert('Error al enviar el correo de restablecimiento de contraseña. Por favor, inténtalo de nuevo.');
+      });
+  }
+
   // Adjuntar el evento click después de que la página se haya cargado completamente
   document.addEventListener("DOMContentLoaded", function () {
     document.getElementById("loginBtn").addEventListener("click", login);
+    document.getElementById("resetPasswordBtn").addEventListener("click", resetPassword);
 
     // Escuchar el evento keypress en los campos de entrada
     document.getElementById("email").addEventListener("keypress", function (e) {
